<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <android.support.constraint.ConstraintLayout xmlns:mapbox="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="?android:attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />


        </android.support.design.widget.AppBarLayout>

        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapboxMapView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            mapbox:mapbox_cameraTargetLat="55.944"
            mapbox:mapbox_cameraTargetLng="-3.188396"
            mapbox:mapbox_cameraZoom="15"
            mapbox:mapbox_styleUrl="@string/mapbox_style_mapbox_streets" />

        <TextView
            android:id="@+id/mapDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintHorizontal_bias="0.02"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <TextView
            android:id="@+id/progressInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            mapbox:layout_constraintBottom_toBottomOf="parent"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintHorizontal_bias="0.02"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toBottomOf="@+id/mapDate"
            mapbox:layout_constraintVertical_bias="0.01" />

        <TextView
            android:id="@+id/bonusInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            mapbox:layout_constraintBottom_toBottomOf="parent"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintHorizontal_bias="0.02"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toBottomOf="@+id/progressInfo"
            mapbox:layout_constraintVertical_bias="0.01" />

        <TextView
            android:id="@+id/penyInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:drawableStart="@drawable/legend_red_24"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            mapbox:layout_constraintBottom_toBottomOf="parent"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintHorizontal_bias="0.95"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            mapbox:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/dolrInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:drawableStart="@drawable/legend_green_24"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            mapbox:layout_constraintBottom_toBottomOf="parent"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintHorizontal_bias="0.95"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toBottomOf="@+id/penyInfo"
            mapbox:layout_constraintVertical_bias="0.01" />

        <TextView
            android:id="@+id/quidInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:drawableStart="@drawable/legend_yellow_24"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            mapbox:layout_constraintBottom_toBottomOf="parent"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintHorizontal_bias="0.95"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toBottomOf="@+id/dolrInfo"
            mapbox:layout_constraintVertical_bias="0.01" />

        <TextView
            android:id="@+id/shilInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:drawableStart="@drawable/legend_blue_24"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            mapbox:layout_constraintBottom_toBottomOf="parent"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintHorizontal_bias="0.95"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toBottomOf="@+id/quidInfo"
            mapbox:layout_constraintVertical_bias="0.01" />

    </android.support.constraint.ConstraintLayout>

    <!-- Container for contents of drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/colorPrimary"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/drawer_header"/>

</android.support.v4.widget.DrawerLayout>