...
    <string name="access_token">pk.eyJ1IjoibXRwaGFtIiwiYSI6ImNqbXdoOWJuNTBqd2Uza3F2eG5uYmJ2anEifQ.BOJjTEEvrS5D_nV_F9_trQ</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Coinz</string>
    <!-- Authentication -->
    <string name="icon_desc">Coinz icon</string>
    <string name="welcome_text">Welcome to Coinz!\nLog in to start playing</string>
    <string name="register_text">Create your account here</string>
    <string name="sign_in_prompt">Sign in</string>
    <string name="register_prompt">Register</string>
    <string name="sign_up_link">Do not have an account? Sign up here</string>
    <string name="log_in_link">Already have an account? Log in here</string>
    <string name="reset_link">Forgot your password? Reset it here</string>
    <string name="reset_instructions">Enter your email address below. Then press the Send Reset
...
